# Docker

./: README.md
moja_paczka/: package.xml  setup.cfg  setup.py
moja_paczka/moja_paczka/: publisher.py
